--- a/neptune/source/templates/admin1/hall-of-fame-cpd.html
+++ b/neptune/source/templates/admin1/hall-of-fame-cpd.html
@@ -59,7 +59,7 @@
                         <a href="cpd-member.html" class="active"><i class="material-icons-two-tone">dashboard</i>Dashboard</a>
                     </li>
                     <li>
-                        <a href="mailbox.html"><i class="material-icons-two-tone"><span class="material-icons">
+                        <a href="scoreBoard.html"><i class="material-icons-two-tone"><span class="material-icons">
                             emoji_events
                             </span></i>Score Board</a>
                     </li>
