--- a/neptune/source/templates/admin1/news-feed-cpd.html
+++ b/neptune/source/templates/admin1/news-feed-cpd.html
@@ -60,7 +60,7 @@
                     <a href="cpd-member.html" class="active"><i class="material-icons-two-tone">dashboard</i>Dashboard</a>
                 </li>
                 <li>
-                    <a href="mailbox.html"><i class="material-icons-two-tone"><span class="material-icons">
+                    <a href="scoreBoard.html"><i class="material-icons-two-tone"><span class="material-icons">
                         emoji_events
                         </span></i>Score Board</a>
                 </li>
@@ -520,12 +520,13 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-xl-6">
+                        <div class="col-xl-7">
                             <div class="card widget widget-popular-blog">
                                 <div class="card-body">
                                     <div class="widget-popular-blog-container">
                                         <div class="widget-popular-blog-content pe-4">
                                             <span class="widget-popular-blog-title">
+                                                <img src="/neptune/source/assets/images/cards/card.png" class="img-thumbnail" alt="..."><br>
                                                 The new music industry’s week in review
                                             </span>
                                             <span class="widget-popular-blog-text">
@@ -539,7 +540,7 @@
                                     </div>
                                 </div>
                                 <div class="card-footer">
-                                    <a href="#" class="btn btn-primary">Read More</a>
+                                    <i class="material-icons text-danger fs-4" style="vertical-align: middle;">favorite</i>
                                     <span class="widget-popular-blog-date float-end">
                                         Date: 3:12 PM
                                     </span>
@@ -547,109 +548,82 @@
                             </div>
                             </div>
                 
-            <div class="col-xl-6">
-            <div class="card widget widget-popular-blog">
-                <div class="card-body">
-                    <div class="widget-popular-blog-container">
-                        <div class="widget-popular-blog-content pe-4">
-                            <span class="widget-popular-blog-title">
-                                The new music industry’s week in review
-                            </span>
-                            <span class="widget-popular-blog-text">
-                                Nullam in mi suscipit, dictum magna ut, semper orci. Suspendisse malesuada quam magna, 
-                                non imperdiet lacus vestibulum non. Class aptent taciti sociosqu ad litora torquent per.
-                            </span>
-                        </div>
-                        <div class="widget-popular-blog-image">
-                            <img src="../../assets/images/widgets/product3.jpeg" alt=""> 
-                        </div>
-                    </div>
-                </div>
-                <div class="card-footer">
-                    <a href="#" class="btn btn-primary">Read More</a>
-                    <span class="widget-popular-blog-date float-end">
-                        Date: 3:12 PM
-                    </span>
-                </div>
-            </div>
-            </div>
+                            <div class="col-xl-7">
+                                <div class="card widget widget-popular-blog">
+                                    <div class="card-body">
+                                        <div class="widget-popular-blog-container">
+                                            <div class="widget-popular-blog-content pe-4">
+                                                <span class="widget-popular-blog-title">
+                                                    <img src="/neptune/source/assets/images/cards/card.png" class="img-thumbnail" alt="..."><br>
+                                                    The new music industry’s week in review
+                                                </span>
+                                                <span class="widget-popular-blog-text">
+                                                    Nullam in mi suscipit, dictum magna ut, semper orci. Suspendisse malesuada quam magna, 
+                                                    non imperdiet lacus vestibulum non. Class aptent taciti sociosqu ad litora torquent per.
+                                                </span>
+                                            </div>
+                                            <div class="widget-popular-blog-image">
+                                                <img src="../../assets/images/widgets/product3.jpeg" alt=""> 
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="card-footer">
+                                        <i class="material-icons text-danger fs-4" style="vertical-align: middle;">favorite</i>
+                                        <span class="widget-popular-blog-date float-end">
+                                            Date: 3:12 PM
+                                        </span>
+                                    </div>
+                                </div>
+                                </div>
 
-
-            <div class="col-xl-6">
-            <div class="card widget widget-popular-blog">
-                <div class="card-body">
-                    <div class="widget-popular-blog-container">
-                        <div class="widget-popular-blog-content pe-4">
-                            <span class="widget-popular-blog-title">
-                                The new music industry’s week in review
-                            </span>
-                            <span class="widget-popular-blog-text">
-                                Nullam in mi suscipit, dictum magna ut, semper orci. Suspendisse malesuada quam magna, non imperdiet lacus vestibulum non. Class aptent taciti sociosqu ad litora torquent per.
-                            </span>
-                        </div>
-                        <div class="widget-popular-blog-image">
-                            <img src="../../assets/images/widgets/product3.jpeg" alt=""> 
-                        </div>
-                    </div>
-                </div>
-                <div class="card-footer">
-                    <a href="#" class="btn btn-primary">Read More</a>
-                    <span class="widget-popular-blog-date float-end">
-                        Date: 3:12 PM
-                    </span>
-                </div>
-            </div>
-            </div>
-
-            <div class="col-xl-7">
-            <div class="card widget widget-popular-blog">
-                <div class="card-body">
-                    <div class="widget-popular-blog-container">
-                        <div class="widget-popular-blog-content pe-4">
-                            <span class="widget-popular-blog-title">
-                                The new music industry’s week in review
-                            </span>
-                            <span class="widget-popular-blog-text">
-                                Nullam in mi suscipit, dictum magna ut, semper orci. Suspendisse malesuada quam magna, non imperdiet lacus vestibulum non. Class aptent taciti sociosqu ad litora torquent per.
-                            </span>
-                        </div>
-                        <div class="widget-popular-blog-image">
-                            <img src="../../assets/images/widgets/product3.jpeg" alt=""> 
-                        </div>
-                    </div>
-                </div>
-                <div class="card-footer">
-                    <a href="#" class="btn btn-primary"data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
-                        Link with href
-                    </a>
-                    <div class="collapse" id="collapseExample">
-                        <div class="card card-body">
-                            Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
-                        </div>
-                    </div>
-                    <span class="widget-popular-blog-date float-end">
-                        Date: 3:12 PM
-                    </span>
-                    <!-- <p>
-                        <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
-                            Link with href
-                        </a>
-                        <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-                            Button with data-bs-target
-                        </button>
-                    </p>
-                    <div class="collapse" id="collapseExample">
-                        <div class="card card-body">
-                            Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
-                        </div>
-                    </div> -->
+                                <div class="col-xl-7">
+                                    <div class="card widget widget-popular-blog">
+                                        <div class="card-body">
+                                            <div class="widget-popular-blog-container">
+                                                <div class="widget-popular-blog-content pe-4">
+                                                    <span class="widget-popular-blog-title">
+                                                        <img src="/neptune/source/assets/images/cards/card.png" class="img-thumbnail" alt="..."><br>
+                                                        The new music industry’s week in review
+                                                    </span>
+                                                    <span class="widget-popular-blog-text">
+                                                        Nullam in mi suscipit, dictum magna ut, semper orci. Suspendisse malesuada quam magna, 
+                                                        non imperdiet lacus vestibulum non. Class aptent taciti sociosqu ad litora torquent per.
+                                                    </span>
+                                                </div>
+                                                <div class="widget-popular-blog-image">
+                                                    <img src="../../assets/images/widgets/product3.jpeg" alt=""> 
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="card-footer">
+                                            <i class="material-icons text-danger fs-4" style="vertical-align: middle;">favorite</i>
+                                            <span class="widget-popular-blog-date float-end">
+                                                Date: 3:12 PM
+                                            </span>
+                                        </div>
+                                    </div>
+                                    </div>
+                 
                 </div>
             </div>
         </div>
-
+        <nav aria-label="Page navigation example">
+            <ul class="pagination justify-content-center">
+                <li class="page-item disabled">
+                    <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Previous</a>
+                </li>
+                <li class="page-item"><a class="page-link" href="#">1</a></li>
+                <li class="page-item"><a class="page-link" href="#">2</a></li>
+                <li class="page-item"><a class="page-link" href="#">3</a></li>
+                <li class="page-item">
+                    <a class="page-link" href="#">Next</a>
+                </li>
+            </ul>
+        </nav>
         </div>
     </div>
     </div>
+    
     
 
     
