--- a/neptune/source/templates/admin1/profile-cpd.html
+++ b/neptune/source/templates/admin1/profile-cpd.html
@@ -56,11 +56,11 @@
                 <li class="sidebar-title">
                     Apps
                 </li>
-                <li class="active-page">
+                <!-- <li class="active-page">
                     <a href="cpd-member.html" class="active"><i class="material-icons-two-tone">dashboard</i>Dashboard</a>
-                </li>
+                </li> -->
                 <li>
-                    <a href="mailbox.html"><i class="material-icons-two-tone"><span class="material-icons">
+                    <a href="scoreBoard.html"><i class="material-icons-two-tone"><span class="material-icons">
                         emoji_events
                         </span></i>Score Board</a>
                 </li>
@@ -520,75 +520,63 @@
                                 </div>
                             </div>
                         </div>
-
-                        
-
-                                    <div class="row">
-                                        <div class="col-xl-12">
-                                            <div class="card widget widget-stats-large">
+                        <div class="col-xl-4">
+                            <div class="card widget widget-popular-product">
+                                <div class="card-body">
+                                    <img src="/neptune/source/assets/images/avatars/3d_avatar-mise_en_page-dribbblexxl_4x.webp" width=40% height=40% alt="">
+                                    <div class="widget-popular-product-container">
+                                        <div class="widget-popular-product-image">
+                                            <img src="../../assets/images/widgets/popular-product.jpeg" alt="">
+                                        </div>
+                                        <!-- <div class="widget-popular-product-tags">
+                                            <span class="badge rounded-pill badge-secondary badge-style-light">Science</span>
+                                            <span class="badge rounded-pill badge-success badge-style-light">Lifestyle</span>
+                                            <span class="badge rounded-pill badge-danger badge-style-light">People</span>
+                                        </div> -->
+                                        <div class="widget-popular-product-content">
+                                            <a href="#" class="widget-popular-product-title">Yididiya Gezahegne</a>
+                                          
+                                            <span class="widget-popular-product-rating">
+                                                <i class="material-icons">star</i>
+                                                <i class="material-icons">star</i>
+                                                <i class="material-icons">star</i>
+                                                <i class="material-icons">star</i>
+                                                <i class="material-icons">star_half</i>
+                                                <li class="widget-popular-product-text m-b-md">
+                                                    <ul>Yididiya</ul>
+                                                    <ul>yididiya07@gmail.com</ul>
+                                                    <ul>0929204079</ul>
+                                                    <ul>Development division</ul>
+                                                </li>
                                                
-                                               <div class="card widget widget-list">
-                                                        
-                                               
-                                                <div class="card-body card-3">
-                                                   
-                                                    <ul class="widget-list-content list-unstyled">
-                                                        <li class="widget-list-item widget-list-item-green">
-                                                            <span class="widget-list-item-avatar">
-                                                                <div class="avatar avatar-rounded">
-                                                                    <img src="../../assets/images/avatars/avatar.png" alt="">
-                                                                </div>
-                                                            </span>
-                                                            <span class="widget-list-item-description">
-                                                                <a href="#" class="widget-list-item-description-title">
-                                                                    Oskar Hudson
-                                                                </a>
-                                                                <span class="widget-list-item-description-subtitle">
-                                                                    Web Developer
-                                                                </span>
-                                                            </span>
-                                                        </li>
-                                                      </ul>
-                                                                
-                                                              
-                                                                <table class="table">
-                                                                 
-                                                                            <tr>
-                                                                                <td colspan="2">Full Name</td>
-                                                                                <td>Yididiya Gezahegne</td>
-                                                                            </tr>
-                                                                  
-                                                                       
-                        
-                                                                            <tr>
-                                                                                <td colspan="2">Email</td>
-                                                                                <td>Yididiya07@gmail.com</td>
-                                                                            </tr>
-                                                                        
-                                                                       
-                                                                           
-                                                                            <tr>
-                                                                                <td colspan="2">ID</td>
-                                                                                <td>ugr/19902/12</td>
-                                                                            </tr>
-                                                                        
-                                                                        <tr>
-                                                                            <td colspan="2">Phone</td>
-                                                                            <td>09292040</td>
-                                                                        </tr>
-                                                                          
-                                                                      
-                                                                    </tbody>
-                                                                </table>
-                                                            </ul>
-                                                            <a href="updateProfile.html" class="btn btn-primary">Update Profile</a>
-                                                            </div> 
-                                                           
-                                                        </div> 
+                                            </span>
+                                            <a href="updateProfile.html" class="btn btn-primary">Update</a>
+                                            
+                                                <button type="button" class="btn btn-danger"  data-bs-toggle="modal" data-bs-target="#exampleModalLive"><i class="material-icons">delete_outline</i>Remove</button>
+                                                <div class="modal fade" id="exampleModalLive" tabindex="-1" aria-labelledby="exampleModalLiveLabel" aria-hidden="true">
+                                                    <div class="modal-dialog">
+                                                        <div class="modal-content">
+                                                            <div class="modal-header">
+                                                                <h5 class="modal-title" id="exampleModalLiveLabel">Modal title</h5>
+                                                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                                            </div>
+                                                            <div class="modal-body">
+                                                                <p>Are you sure you want to delete your account?</p>
+                                                            </div>
+                                                            <div class="modal-footer">
+                                                              <a href="sign-in.html"><button type="button" class="btn btn-danger" >Delete</button></a>
+                                                              <a href="profile.html"> <button type="button" class="btn btn-primary">Back</button></a>
+                                                            </div>
+                                                        </div>
                                                     </div>
-                                                </div> 
-                                           </div>
-         
+                                                </div>
+                                            </div>
+            
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
 
     <!-- Javascripts -->
     <script src="../../assets/plugins/jquery/jquery-3.5.1.min.js"></script>
