--- a/neptune/source/templates/admin1/newsFeed.html
+++ b/neptune/source/templates/admin1/newsFeed.html
@@ -47,7 +47,7 @@
                 <a href="#">
                     <img src="../../assets/images/avatars/avatar.png">
                     <span class="activity-indicator"></span>
-                    <span class="user-info-text">Chloe<br><span class="user-state-info">On a call</span></span>
+                    <span class="user-info-text">Abebe<br><span class="user-state-info">On a call</span></span>
                 </a>
             </div>
         </div>
@@ -56,12 +56,7 @@
                 <li class="sidebar-title">
                     Apps
                 </li>
-                <li class="active-page">
-                    <a href="dev-member.html" class="active"><i class="material-icons-two-tone">dashboard</i>Dashboard</a>
-                </li>
-                <!-- <li>
-                    <a href="mailbox.html"><i class="material-icons-two-tone">inbox</i>Mailbox<span class="badge rounded-pill badge-danger float-end">87</span></a>
-                </li> -->
+               
                 <li>
                     <a href="#"><i class="material-icons-outlined">newspaper</i>News<span class="badge rounded-pill badge-danger float-end">87</span></a>
                 </li>
@@ -366,9 +361,8 @@
                                         <i class="material-icons">add</i>
                                     </a>
                                     <ul class="dropdown-menu" aria-labelledby="addDropdownLink">
-                                        <li><a class="dropdown-item" href="#">New Workspace</a></li>
-                                        <li><a class="dropdown-item" href="#">New Board</a></li>
-                                        <li><a class="dropdown-item" href="#">Create Project</a></li>
+                                        <li><a class="dropdown-item" href="request-to-post.html">Request to post</a></li>
+                                     
                                     </ul>
                                 </li>
                                 <li class="nav-item dropdown hidden-on-mobile">
@@ -408,8 +402,8 @@
             
                         </div>
                         <div class="d-flex">
-                            <ul class="navbar-nav">
-                                <li class="nav-item hidden-on-mobile">
+                            <!-- <ul class="navbar-nav"> -->
+                                <!-- <li class="nav-item hidden-on-mobile">
                                     <a class="nav-link active" href="#">Applications</a>
                                 </li>
                                 <li class="nav-item hidden-on-mobile">
@@ -417,20 +411,26 @@
                                 </li>
                                 <li class="nav-item hidden-on-mobile">
                                     <a class="nav-link" href="#">Projects</a>
-                                </li>
+                                </li> -->
                                 <li class="nav-item">
                                     <a class="nav-link toggle-search" href="#"><i class="material-icons">search</i></a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link toggle-search" href="#"></a>
                                 </li>
+
+                                <li class="nav-item hidden-on-mobile">
+                                    <a class="nav-link language-dropdown-toggle" href="#" id="languageDropDown" data-bs-toggle="dropdown"><img src="../../assets/images/avatars/avatar.png" alt=""></a>
+                                        
+                                </li>
                               
                               
                                 <li class="nav-item hidden-on-mobile">
 
 
-                                    <a class="nav-link nav-notifications-toggle" id="notificationsDropDown" href="#" data-bs-toggle="dropdown"><i class="material-icons">notifications
-                                    </i></a>
+
+                                    <a class="nav-link nav-notifications-toggle" id="notificationsDropDown" href="#" data-bs-toggle="dropdown"><i class="material-icons">notifications </i><span class="badge rounded-pill badge-danger float-end">7</span></a>
+                                   
                                     <div class="dropdown-menu dropdown-menu-end notifications-dropdown" aria-labelledby="notificationsDropDown">
                                         <h6 class="dropdown-header">Notifications</h6>
                                         <div class="notifications-dropdown-list">
@@ -518,12 +518,13 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-xl-6">
+                        <div class="col-xl-7">
                             <div class="card widget widget-popular-blog">
                                 <div class="card-body">
                                     <div class="widget-popular-blog-container">
                                         <div class="widget-popular-blog-content pe-4">
                                             <span class="widget-popular-blog-title">
+                                                <img src="/neptune/source/assets/images/cards/card.png" class="img-thumbnail" alt="..."><br>
                                                 The new music industry’s week in review
                                             </span>
                                             <span class="widget-popular-blog-text">
@@ -537,7 +538,7 @@
                                     </div>
                                 </div>
                                 <div class="card-footer">
-                                    <a href="#" class="btn btn-primary">Read More</a>
+                                    <i class="material-icons text-danger fs-4" style="vertical-align: middle;">favorite</i>
                                     <span class="widget-popular-blog-date float-end">
                                         Date: 3:12 PM
                                     </span>
@@ -545,111 +546,83 @@
                             </div>
                             </div>
                 
-            <div class="col-xl-6">
-            <div class="card widget widget-popular-blog">
-                <div class="card-body">
-                    <div class="widget-popular-blog-container">
-                        <div class="widget-popular-blog-content pe-4">
-                            <span class="widget-popular-blog-title">
-                                The new music industry’s week in review
-                            </span>
-                            <span class="widget-popular-blog-text">
-                                Nullam in mi suscipit, dictum magna ut, semper orci. Suspendisse malesuada quam magna, 
-                                non imperdiet lacus vestibulum non. Class aptent taciti sociosqu ad litora torquent per.
-                            </span>
-                        </div>
-                        <div class="widget-popular-blog-image">
-                            <img src="../../assets/images/widgets/product3.jpeg" alt=""> 
-                        </div>
-                    </div>
-                </div>
-                <div class="card-footer">
-                    <a href="#" class="btn btn-primary">Read More</a>
-                    <span class="widget-popular-blog-date float-end">
-                        Date: 3:12 PM
-                    </span>
-                </div>
-            </div>
-            </div>
+                            <div class="col-xl-7">
+                                <div class="card widget widget-popular-blog">
+                                    <div class="card-body">
+                                        <div class="widget-popular-blog-container">
+                                            <div class="widget-popular-blog-content pe-4">
+                                                <span class="widget-popular-blog-title">
+                                                    <img src="/neptune/source/assets/images/cards/card.png" class="img-thumbnail" alt="..."><br>
+                                                    The new music industry’s week in review
+                                                </span>
+                                                <span class="widget-popular-blog-text">
+                                                    Nullam in mi suscipit, dictum magna ut, semper orci. Suspendisse malesuada quam magna, 
+                                                    non imperdiet lacus vestibulum non. Class aptent taciti sociosqu ad litora torquent per.
+                                                </span>
+                                            </div>
+                                            <div class="widget-popular-blog-image">
+                                                <img src="../../assets/images/widgets/product3.jpeg" alt=""> 
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="card-footer">
+                                        <i class="material-icons text-danger fs-4" style="vertical-align: middle;">favorite</i>
+                                        <span class="widget-popular-blog-date float-end">
+                                            Date: 3:12 PM
+                                        </span>
+                                    </div>
+                                </div>
+                                </div>
 
-
-            <div class="col-xl-6">
-            <div class="card widget widget-popular-blog">
-                <div class="card-body">
-                    <div class="widget-popular-blog-container">
-                        <div class="widget-popular-blog-content pe-4">
-                            <span class="widget-popular-blog-title">
-                                The new music industry’s week in review
-                            </span>
-                            <span class="widget-popular-blog-text">
-                                Nullam in mi suscipit, dictum magna ut, semper orci. Suspendisse malesuada quam magna, non imperdiet lacus vestibulum non. Class aptent taciti sociosqu ad litora torquent per.
-                            </span>
-                        </div>
-                        <div class="widget-popular-blog-image">
-                            <img src="../../assets/images/widgets/product3.jpeg" alt=""> 
-                        </div>
-                    </div>
-                </div>
-                <div class="card-footer">
-                    <a href="#" class="btn btn-primary">Read More</a>
-                    <span class="widget-popular-blog-date float-end">
-                        Date: 3:12 PM
-                    </span>
-                </div>
-            </div>
-            </div>
-
-            <div class="col-xl-6">
-            <div class="card widget widget-popular-blog">
-                <div class="card-body">
-                    <div class="widget-popular-blog-container">
-                        <div class="widget-popular-blog-content pe-4">
-                            <span class="widget-popular-blog-title">
-                                The new music industry’s week in review
-                            </span>
-                            <span class="widget-popular-blog-text">
-                                Nullam in mi suscipit, dictum magna ut, semper orci. Suspendisse malesuada quam magna, non imperdiet lacus vestibulum non. Class aptent taciti sociosqu ad litora torquent per.
-                            </span>
-                        </div>
-                        <div class="widget-popular-blog-image">
-                            <img src="../../assets/images/widgets/product3.jpeg" alt=""> 
-                        </div>
-                    </div>
-                </div>
-                <div class="card-footer">
-                    <a href="#" class="btn btn-primary"data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
-                        Link with href
-                    </a>
-                    <div class="collapse" id="collapseExample">
-                        <div class="card card-body">
-                            Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
-                        </div>
-                    </div>
-                    <span class="widget-popular-blog-date float-end">
-                        Date: 3:12 PM
-                    </span>
-                    <!-- <p>
-                        <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
-                            Link with href
-                        </a>
-                        <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-                            Button with data-bs-target
-                        </button>
-                    </p>
-                    <div class="collapse" id="collapseExample">
-                        <div class="card card-body">
-                            Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
-                        </div>
-                    </div> -->
+                                <div class="col-xl-7">
+                                    <div class="card widget widget-popular-blog">
+                                        <div class="card-body">
+                                            <div class="widget-popular-blog-container">
+                                                <div class="widget-popular-blog-content pe-4">
+                                                    <span class="widget-popular-blog-title">
+                                                        <img src="/neptune/source/assets/images/cards/card.png" class="img-thumbnail" alt="..."><br>
+                                                        The new music industry’s week in review
+                                                    </span>
+                                                    <span class="widget-popular-blog-text">
+                                                        Nullam in mi suscipit, dictum magna ut, semper orci. Suspendisse malesuada quam magna, 
+                                                        non imperdiet lacus vestibulum non. Class aptent taciti sociosqu ad litora torquent per.
+                                                    </span>
+                                                </div>
+                                                <div class="widget-popular-blog-image">
+                                                    <img src="../../assets/images/widgets/product3.jpeg" alt=""> 
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="card-footer">
+                                            <i class="material-icons text-danger fs-4" style="vertical-align: middle;">favorite</i>
+                                            <span class="widget-popular-blog-date float-end">
+                                                Date: 3:12 PM
+                                            </span>
+                                        </div>
+                                    </div>
+                                    </div>
+                 
                 </div>
             </div>
         </div>
-
+        <nav aria-label="Page navigation example">
+            <ul class="pagination justify-content-center">
+                <li class="page-item disabled">
+                    <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Previous</a>
+                </li>
+                <li class="page-item"><a class="page-link" href="#">1</a></li>
+                <li class="page-item"><a class="page-link" href="#">2</a></li>
+                <li class="page-item"><a class="page-link" href="#">3</a></li>
+                <li class="page-item">
+                    <a class="page-link" href="#">Next</a>
+                </li>
+            </ul>
+        </nav>
         </div>
     </div>
     </div>
     
-
+    
     
                             
 
