--- a/neptune/source/templates/admin1/request-to-post-cpd.html
+++ b/neptune/source/templates/admin1/request-to-post-cpd.html
@@ -56,11 +56,9 @@
                 <li class="sidebar-title">
                     Apps
                 </li>
-                <li class="active-page">
-                    <a href="cpd-member.html" class="active"><i class="material-icons-two-tone">dashboard</i>Dashboard</a>
-                </li>
+               
                 <li>
-                    <a href="mailbox.html"><i class="material-icons-two-tone"><span class="material-icons">
+                    <a href="scoreBoard.html"><i class="material-icons-two-tone"><span class="material-icons">
                         emoji_events
                         </span></i>Score Board</a>
                 </li>
